--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build.loader.js";
+      var loaderUrl = buildUrl + "/gtagweb.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build.data.gz",
-        frameworkUrl: buildUrl + "/build.framework.js.gz",
-        codeUrl: buildUrl + "/build.wasm.gz",
+        dataUrl: buildUrl + "/gtagweb.data.unityweb",
+        frameworkUrl: buildUrl + "/gtagweb.framework.js.unityweb",
+        codeUrl: buildUrl + "/gtagweb.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "boolonx",
         productName: "gorilla tag web",
